Completed basic dashboard + added products example crud to attach files

--- a/test/dummy/app/views/layouts/lato/_sidebar-nav_content.html.erb
+++ b/test/dummy/app/views/layouts/lato/_sidebar-nav_content.html.erb
@@ -1,3 +1,7 @@
 <%= lato_sidebar_nav_item :documentation, main_app.documentation_path do %>
   <i class="bi bi-info-circle me-2"></i> Documentation
 <% end %>
+
+<%= lato_sidebar_nav_item :products, main_app.products_path do %>
+  <i class="bi bi-list me-2"></i> CRUD Example
+<% end %>
