--- a/app/views/lato_storage/application/index.html.erb
+++ b/app/views/lato_storage/application/index.html.erb
@@ -112,7 +112,7 @@
             <% @largest_blobs.each do |blob| %>
               <a class="list-group-item list-group-item-action" href="<%= main_app.url_for(blob) %>" target="_blank" rel="noopener noreferrer" download>
                 <div class="d-flex justify-content-between align-items-center">
-                  <strong><%= blob.filename %></strong>
+                  <strong class="text-truncate"><%= blob.filename %></strong>
                   <div class="d-flex align-items-center">
                     <span class="badge bg-primary rounded-pill">
                       <%= format_bytes blob.byte_size %>
