--- a/test/dummy/app/views/application/documentation.html.erb
+++ b/test/dummy/app/views/application/documentation.html.erb
@@ -1,4 +1,8 @@
 <%= lato_page_head 'Documentation' %>
 
-<h2>Come utilizzare la gemma</h2>
+<div class="alert alert-info mt-3">
+  <p class="mb-0">
+  Nessuna documentazione necessaria per il momento.
+  </p>
+</div>
 
