--- a/app/views/lato_storage/attachments/index.html.erb
+++ b/app/views/lato_storage/attachments/index.html.erb
@@ -1,5 +1,5 @@
-<%= lato_page_head 'Attachments', [
-  { label: 'Storage', path: lato_storage.root_path },
+<%= lato_page_head I18n.t('lato_storage.attachments'), [
+  { label: I18n.t('lato_storage.storage'), path: lato_storage.root_path },
 ] %>
 
 <div class="card">
