--- a/app/views/lato_storage/variant_records/index.html.erb
+++ b/app/views/lato_storage/variant_records/index.html.erb
@@ -1,9 +1,9 @@
-<%= lato_page_head I18n.t('lato_storage.blobs'), [
+<%= lato_page_head I18n.t('lato_storage.variant_records'), [
   { label: I18n.t('lato_storage.storage'), path: lato_storage.root_path },
 ] %>
 
 <div class="card">
   <div class="card-body">
-    <%= lato_index @blobs %>
+    <%= lato_index @variant_records %>
   </div>
 </div>
