--- a/test/dummy/app/views/products/_form.html.erb
+++ b/test/dummy/app/views/products/_form.html.erb
@@ -16,7 +16,7 @@ product ||= Product.new
 
     <div class="mb-3">
       <%= lato_form_item_label form, :file %>
-      <%= lato_form_item_input_file form, :file %>
+      <%= lato_form_item_input_file form, :file, accept: 'image/*' %>
     </div>
 
     <div class="d-flex justify-content-end">
