--- a/app/views/lato_storage/attachments/index.html.erb
+++ b/app/views/lato_storage/attachments/index.html.erb
@@ -4,6 +4,6 @@
 
 <div class="card">
   <div class="card-body">
-    <%= lato_index @attachments %>
+    <%= lato_index @attachments, skip_total_count: LatoStorage.config.optimize_performances %>
   </div>
 </div>
