--- a/app/views/lato_storage/variant_records/index.html.erb
+++ b/app/views/lato_storage/variant_records/index.html.erb
@@ -4,6 +4,6 @@
 
 <div class="card">
   <div class="card-body">
-    <%= lato_index @variant_records %>
+    <%= lato_index @variant_records, skip_total_count: LatoStorage.config.optimize_performances %>
   </div>
 </div>
