Updated gems + translation on documentation page

--- a/test/dummy/app/views/application/documentation.html.erb
+++ b/test/dummy/app/views/application/documentation.html.erb
@@ -2,7 +2,7 @@
 
 <div class="alert alert-info mt-3">
   <p class="mb-0">
-  Nessuna documentazione necessaria per il momento.
+  No documentation needed for the moment.
   </p>
 </div>
 
